# autoswingus_pro

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
autoswing/: __init__.py
autoswing/analysis/: __init__.py  montecarlo.py
autoswing/backtest/: backtester.py  walkforward.py
autoswing/cli/: main.py
autoswing/config/: accounts.yaml  loader.py  settings_default.yaml
autoswing/data/: AAPL.csv  cache.py  crypto_cache.py  data_client.py  fetch.py  loader.py
autoswing/data/sources/: __init__.py  alpaca_source.py  crypto_source.py  yahoo_source.py
autoswing/engine/: __init__.py  __init__.py.bak.20250717_094020  ledger.py  paper_executor.py  paper_executor.py.bak.20250717_094020  portfolio.py  trade.py
autoswing/io/: trade_log.py
autoswing/pipeline/: __init__.py  daily.py
autoswing/strategies/: base_strategy.py  sma_pullback.py
autoswing/ui/: app.py
autoswing/utils/: env.py
scripts/: asw-apply-patch.sh  asw-patch-pr.sh  bootstrap.sh  cron_example.txt  seed_cache_from_ccxt.py  watch_loop.sh
scripts/systemd/: autoswingus.service  autoswingus.timer
tests/: test_backtest_stub.py  test_config_load.py  test_data_cache.py  test_imports.py
